// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) DragOrZoom render normally 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "transform": "scale(0.5) translate(0px, 0px)",
      "transformOrigin": "0 0",
      "width": "100%",
    }
  }
/>
`;

exports[`(Component) mount render normally 1`] = `
<DragOrZoom
  a={Object {}}
  onChange={[Function]}
  scale={0.5}
>
  <div
    style={
      Object {
        "height": "100%",
        "transform": "scale(0.5) translate(0px, 0px)",
        "transformOrigin": "0 0",
        "width": "100%",
      }
    }
  />
</DragOrZoom>
`;
